<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="get_forecast_error">Failed to get forecast</string>
    <string name="forecast_title">Forecast</string>

    <string name="label_temp">Temp: </string>
    <string name="label_feels_like">Feels like: </string>
    <string name="label_cloud">Cloud: </string>
    <string name="label_wind_speed">Speed: </string>
    <string name="label_wind_degree">Degree: </string>
    <string name="label_wind_direction">Wind direction: </string>
    <string name="label_pressure">Pressure:</string>
    <string name="label_precipitation">Precipitation:</string>
    <string name="label_vis">Vis:</string>
    <string name="label_gust">Gust:</string>
    <string name="label_humidity">Humidity:</string>

    <string name="monday_abbreviaed">Mon</string>
    <string name="tuesday_abbreviaed">Tue</string>
    <string name="wednesday_abbreviaed">Wed</string>
    <string name="thursday_abbreviaed">Thu</string>
    <string name="friday_abbreviaed">Fri</string>
    <string name="saturday_abbreviaed">Sat</string>
    <string name="sunday_abbreviaed">San</string>

</resources>