<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/background_card"
        android:importantForAccessibility="no"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/windIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/windIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/background_card"
        android:importantForAccessibility="no"
        android:padding="8dp"
        android:layout_marginTop="@dimen/def_v_padding"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/time"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:layout_marginTop="@dimen/def_v_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windIcon"
        tools:text="10:00" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="8dp"
        app:constraint_referenced_ids="time, windIcon, weatherIcon" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:padding="16dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_temp" />

        <TextView
            android:id="@+id/tempValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_feels_like" />

        <TextView
            android:id="@+id/feelsLikeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="23" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_cloud" />

        <TextView
            android:id="@+id/cloudValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="100%" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_wind_speed" />

        <TextView
            android:id="@+id/windSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_wind_direction" />

        <TextView
            android:id="@+id/directionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="NNW" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_pressure" />

        <TextView
            android:id="@+id/pressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_precipitation" />

        <TextView
            android:id="@+id/precipitationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="23" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_vis" />

        <TextView
            android:id="@+id/visValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="100%" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_gust" />

        <TextView
            android:id="@+id/gustValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/label_humidity"
            />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:text="23" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>